--- a/.verb.md
+++ b/.verb.md
@@ -2,7 +2,63 @@
 
 ```js
 var normalize = require('{%= name %}');
+var gulp = require('gulp');
+
+gulp.task('default', function() {
+  return gulp.src('package.json')
+    .pipe(normalize())
+    .pipe(gulp.dest('.'))
+});
 ```
 
-## API
-{%= apidocs("index.js") %}
+## Options
+
+### .match
+
+Custom function for matching files to normalize. By default only `package.json` is matched. 
+
+This gives you control over which files to match, in case you're generating files from templates or something.
+
+**Example**
+
+```js
+gulp.src('package.json')
+  .pipe(normalize({
+    match: function(file) {
+      return file.basename = 'foo.js';
+    }
+  }))
+```
+
+### .fields
+
+[normalize-pkg][] uses a schema that has a `field` for each property on the object being normalized. If a property is not recognized, normalize-pkg will just pass it through as-is. 
+
+You can use this option to add `fields` to the schema. See [normalize-pkg][] for more details.
+
+**Example**
+
+The following example adds normalizers for fields `foo` and `bar`:
+
+```js
+gulp.src('package.json')
+  .pipe(normalize({
+    fields: {
+      foo: {
+        type: ['string', 'array'],
+        normalize: function(val, key, config, schema) {
+          // do stuff to val
+          return val;
+        }
+      },
+      bar: {
+        type: 'object',
+        normalize: function(val, key, config, schema) {
+          // do stuff to val
+          return val;
+        }
+      }
+    }
+  }))
+```
+
